--- a/index.css
+++ b/index.css
@@ -2,12 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: montserrat, sans-serif;
-  font-weight: lighter;
-}
-
-body {
-  background-color: #d0e8f2;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .container {
